--- a/app/src/main/res/layout/common_sign_up_fragment.xml
+++ b/app/src/main/res/layout/common_sign_up_fragment.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/sign_up_as_user_btn"
+            android:id="@+id/signUpAsUserBtn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
             android:text="@string/i_am_user" />
 
         <Button
-            android:id="@+id/sign_up_as_master_btn"
+            android:id="@+id/signUpAsMasterBtn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
