--- a/app/src/main/res/layout/error_container.xml
+++ b/app/src/main/res/layout/error_container.xml
@@ -20,7 +20,7 @@
             style="@style/Subhead" />
 
         <Button
-            android:id="@+id/repeat_btn"
+            android:id="@+id/repeatBtn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
