--- a/app/src/main/res/layout/image_viewer.xml
+++ b/app/src/main/res/layout/image_viewer.xml
@@ -8,7 +8,7 @@
         android:background="@color/black">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/image_slider"
+            android:id="@+id/imageSlider"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_centerInParent="true"
