--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        android:id="@+id/map_container"
+        android:id="@+id/mapContainer"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
