--- a/app/src/main/res/layout/master_review.xml
+++ b/app/src/main/res/layout/master_review.xml
@@ -10,13 +10,13 @@
     android:paddingTop="@dimen/master_review_padding_top">
 
     <TextView
-        android:id="@+id/review_author"
+        android:id="@+id/reviewAuthor"
         style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/review_date"
+        android:id="@+id/reviewDate"
         style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
         android:fontFamily="sans-serif-medium" />
 
     <TextView
-        android:id="@+id/review_text"
+        android:id="@+id/reviewText"
         style="@style/Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
