--- a/app/src/main/res/layout/master_sign.xml
+++ b/app/src/main/res/layout/master_sign.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/main_part"
+        android:id="@+id/mainPart"
         style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         android:gravity="center_vertical" />
 
     <TextView
-        android:id="@+id/secondary_part"
+        android:id="@+id/secondaryPart"
         style="@style/Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
