--- a/app/src/main/res/layout/master_sign_up_fragment.xml
+++ b/app/src/main/res/layout/master_sign_up_fragment.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent">
 
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progressBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -62,7 +62,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/password_wrapper"
+                android:id="@+id/passwordWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/auth_space_between_elements"
@@ -77,14 +77,14 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/repeat_password_wrapper"
+                android:id="@+id/repeatPasswordWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/auth_space_between_elements"
                 android:hint="@string/repeat_password">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/repeat_password"
+                    android:id="@+id/repeatPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword" />
@@ -92,7 +92,7 @@
 
 
             <Button
-                android:id="@+id/sign_up_btn"
+                android:id="@+id/signUpBtn"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/auth_login_button_height"
