--- a/app/src/main/res/layout/progress_container.xml
+++ b/app/src/main/res/layout/progress_container.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/progress_bar"
+    android:id="@+id/progressBar"
     android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
