--- a/app/src/main/res/layout/radio_button_with_price.xml
+++ b/app/src/main/res/layout/radio_button_with_price.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <RadioButton
-        android:id="@+id/radio_button"
+        android:id="@+id/radioButton"
         style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,8 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/textColorSecondary"
-        app:layout_constraintBottom_toBottomOf="@id/radio_button"
+        app:layout_constraintBottom_toBottomOf="@id/radioButton"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/radio_button" />
+        app:layout_constraintTop_toTopOf="@id/radioButton" />
 
 </android.support.constraint.ConstraintLayout>
