--- a/app/src/main/res/layout/suitable_master.xml
+++ b/app/src/main/res/layout/suitable_master.xml
@@ -59,7 +59,7 @@
 
     <!-- Stars -->
     <TextView
-        android:id="@+id/rating_main_part"
+        android:id="@+id/ratingPrimaryPart"
         style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,11 +71,11 @@
         app:layout_constraintTop_toBottomOf="@id/role" />
 
     <TextView
-        android:id="@+id/rating_secondary_part"
+        android:id="@+id/ratingSecondaryPart"
         style="@style/Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/rating_main_part"
-        app:layout_constraintLeft_toRightOf="@id/rating_main_part"
-        app:layout_constraintTop_toTopOf="@id/rating_main_part" />
+        app:layout_constraintBottom_toBottomOf="@id/ratingPrimaryPart"
+        app:layout_constraintLeft_toRightOf="@id/ratingPrimaryPart"
+        app:layout_constraintTop_toTopOf="@id/ratingPrimaryPart" />
 </android.support.constraint.ConstraintLayout>
