--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mapContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/mapContainer"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="Demonstration by using Yandex Map Kit" />
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_width="wrap_content"
-            android:text="Demonstration by using Yandex Map Kit" />
-
-        <ru.yandex.yandexmapkit.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="580dp"
-            android:layout_alignParentBottom="true"
-            android:apiKey="1234567890"
-            android:tag="static" />
-    </RelativeLayout>
-</layout>
+    <ru.yandex.yandexmapkit.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:layout_alignParentBottom="true"
+        android:apiKey="1234567890"
+        android:tag="static" />
+</RelativeLayout>
