--- a/app/src/main/res/layout/master_activity.xml
+++ b/app/src/main/res/layout/master_activity.xml
@@ -103,17 +103,11 @@
                                 android:orientation="horizontal" />
 
                             <TextView
-                                android:id="@+id/ratingMainPart"
+                                android:id="@+id/rating"
                                 style="@style/Body2"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/master_space_between_stars_and_text" />
-
-                            <TextView
-                                android:id="@+id/ratingSecondaryPart"
-                                style="@style/Body1"
-                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
+
                         </LinearLayout>
 
                         <!-- description -->
